# x32-osc-proxy

./: LICENSE  README.md  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  net.rs  settings.rs
