[package]
name = "x32-osc-proxy"
version = "0.9.0"
description = "X32 Console Family OSC Proxy for Vor"
authors = ["JTSage <jtsage@gmail.com>"]
repository = "https://github.com/jtsage/x32-osc-proxy"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "x32_osc_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x32_osc_state = "0.1.2"
app_dirs2 = "2.5.5"
tokio = { version = "1.43.0", features = ["net", "time"] }

